about and tool part

--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@ h1, h2, h3, h4, h5, h6, p, a {
   color: #444;
 }
 
-.blue h1, h2, h3, h4, h5, h6, p, a {
-  color: #fff;
+p {
+  color: #444;
 }
 
 .container {
@@ -124,6 +124,112 @@ h1, h2, h3, h4, h5, h6, p, a {
   position: absolute;
   right: -55px;
   bottom: -40px;
+}
+
+#about {
+  padding: 100px 0 80px 0;
+}
+#about .container .row {
+  align-items: center;
+}
+#about .container .row .about__heading_main .about__heading h6 {
+  font-size: 14px;
+  font-weight: 300;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+#about .container .row .about__heading_main .about__heading h2 {
+  font-size: 32px;
+  font-weight: 400;
+  font-family: "Abril Fatface", cursive;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+#about .container .row .about__heading_main .about__heading p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
+#about .container .row .about__heading_main .about__p {
+  margin-left: 30px;
+  margin-top: 30px;
+}
+#about .container .row .about__heading_main .about__p p {
+  margin-bottom: 30px;
+  font-size: 16px;
+  line-height: 24px;
+}
+#about .container .row .about__heading_main .about__btn {
+  display: flex;
+  gap: 30px;
+}
+#about .container .row .about__heading_main .about__btn a {
+  padding: 15px 20px;
+  background-color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.1);
+  transition: all linear 0.2s;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+#tool {
+  padding: 100px 0 80px 0;
+}
+#tool .container .row .tool__heading {
+  text-align: center;
+  margin-bottom: 60px;
+}
+#tool .container .row .tool__heading h6 {
+  color: #0084d7;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 150%;
+}
+#tool .container .row .tool__heading h2 {
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 140%;
+}
+#tool .container .row .tool__img {
+  position: relative;
+}
+#tool .container .row .tool__img p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 200%;
+}
+#tool .container .row .tool__img img {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+#tool .container .row .tool__service {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 35px;
+}
+#tool .container .row .tool__service .service_content {
+  padding: 22px 28px;
+  padding-right: 36px;
+  background-color: #F0EDFF;
+  border-radius: 15px;
+  display: flex;
+  gap: 40px;
+  padding-right: 60px;
+}
+#tool .container .row .tool__service .service_content .content_detail h3 {
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 140%;
+}
+#tool .container .row .tool__service .service_content .content_detail p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  margin-top: 10px;
 }
 
 #color_pick .container .color__main {
