--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,31 @@ h1, h2, h3, h4, h5, h6, p, a {
   width: 1260px;
 }
 
-.white h1, h2, h3, h4, h5, h6, a {
+.white h1 {
+  color: #222;
+}
+
+.white h2 {
+  color: #222;
+}
+
+.white h3 {
+  color: #222;
+}
+
+.white h4 {
+  color: #222;
+}
+
+.white h5 {
+  color: #222;
+}
+
+.white h6 {
+  color: #222;
+}
+
+.white a {
   color: #222;
 }
 
@@ -34,12 +58,88 @@ p {
   color: #444;
 }
 
+.blue {
+  background: #0084d7 !important;
+}
+
+.blue nav {
+  background: #0084d7 !important;
+}
+
+.blue h1 {
+  color: #fff;
+}
+
+.blue h2 {
+  color: #fff;
+}
+
+.blue h3 {
+  color: #fff;
+}
+
+.blue h4 {
+  color: #fff;
+}
+
+.blue h5 {
+  color: #fff;
+}
+
+.blue h6 {
+  color: #fff;
+}
+
+.blue a {
+  color: #0084d7;
+}
+
+.blue p {
+  color: #fff;
+}
+
+.black {
+  background: #222;
+}
+
+.black h1 {
+  color: #FCD980;
+}
+
+.black h2 {
+  color: #FCD980;
+}
+
+.black h3 {
+  color: #FCD980;
+}
+
+.black h4 {
+  color: #FCD980;
+}
+
+.black h5 {
+  color: #FCD980;
+}
+
+.black h6 {
+  color: #FCD980;
+}
+
+.black a {
+  color: #FCD980;
+}
+
+.black p {
+  color: #fff;
+}
+
 #color_pick .container .color__main .color ul li:nth-child(1) {
-  background: #0084d7;
+  background: #fff;
 }
 
 #color_pick .container .color__main .color ul li:nth-child(2) {
-  background: #fff;
+  background: #0084d7;
 }
 
 #color_pick .container .color__main .color ul li:nth-child(3) {
@@ -225,7 +325,7 @@ p {
 }
 
 #blog {
-  padding: 50px 0;
+  padding: 50px 0 80px 0;
 }
 #blog .container h4 {
   font-style: normal;
@@ -265,6 +365,11 @@ p {
   font-weight: 500;
   font-size: 16px;
   line-height: 28px;
+}
+
+#team {
+  padding: 80px 0;
+  background: linear-gradient(135deg, rgba(0, 94, 199, 0.85), rgba(162, 0, 255, 0.8)), url(../images/teambg.jpg);
 }
 
 #color_pick .container .color__main {
