--- a/scss/style.scss
+++ b/scss/style.scss
@@ -469,8 +469,85 @@ p{
 // --------------------team--------------
 
 #team{
-    padding: 80px 0;
+    padding: 120px 0;
     background: linear-gradient(135deg,rgba(0,94,199,.85),rgba(162,0,255,.8)) ,url(../images/teambg.jpg) ;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    .container{
+        .team__heading{
+            text-align: center;
+            p{
+                font-size: 18px;
+                font-weight: 600;
+                color: $white;
+                margin-bottom: 50px;
+                letter-spacing: 5px;
+            }
+            h2{
+                font-size: 50px;
+                font-weight: 700;
+                line-height: 150%;
+                margin-bottom: 60px;
+                color: $white;
+            }
+        }
+        .row{
+            .team__detail_main{                
+                .team__detail{
+                    width: 90%;
+                    text-align: center;
+                    background-color: $white;
+                    padding: 10px;
+                    border-radius: 5px;
+                    .team__img{
+                        width: 100%;
+                        position: relative;
+                        &:hover .overlay{
+                            opacity: 1111;
+                            cursor: pointer;
+                        }
+                        img{
+                            width: 100%;
+                        }
+                        .overlay{
+                            position: absolute;
+                            left: 0;
+                            bottom: 0;
+                            width: 100%;
+                            background-color: rgba(26, 26, 26, 0.803);
+                            height: 100%;
+                            opacity: 0;
+                            transition: all linear 0.3s;
+                            display: flex;
+                            align-items: end;
+                            justify-content: center;
+                            padding-bottom: 30px;
+                            gap: 20px;
+                            a{
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                width: 40px;
+                                height: 40px;
+                                background: linear-gradient(135deg,rgba(0,94,199,.85),rgba(162,0,255,.8)) ;
+                                color: $white;
+                                font-size: 20px;
+                            }
+                        }
+                    }
+                    p{
+                        margin-top: 20px;
+                        color: $blue;
+                    }
+                    h4{
+                        font-weight: 600;
+                        margin-bottom: 25px;
+                    }
+                }
+            }
+        }
+    }
 }
 
 
