--- a/css/style.css
+++ b/css/style.css
@@ -443,6 +443,107 @@ p {
   margin-bottom: 25px;
 }
 
+#service {
+  padding: 100px 0;
+}
+#service .container .service__heading {
+  text-align: center;
+}
+#service .container .service__heading p {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 40px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+#service .container .service__heading h2 {
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 60px;
+}
+#service .container .row {
+  row-gap: 25px;
+}
+#service .container .row .service__main {
+  background-color: #F4F6FC;
+  padding: 45px 25px 40px 40px;
+  border-radius: 8px;
+}
+#service .container .row .service__main .service__detail h4 {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 32px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+#service .container .row .service__main .service__detail p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+#footer {
+  padding: 100px;
+  background-color: #F4F6FC;
+}
+#footer .container .row .logo img {
+  width: 140px;
+  margin-bottom: 40px;
+}
+#footer .container .row .logo p {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+}
+#footer .container .row .talk h4 {
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 64px;
+  margin-bottom: 20px;
+}
+#footer .container .row .talk p {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+}
+#footer .container .row .talk .icon {
+  display: flex;
+  gap: 20px;
+}
+#footer .container .row .talk .icon a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 45px;
+  width: 45px;
+  background: linear-gradient(135deg, rgba(0, 94, 199, 0.85), rgba(162, 0, 255, 0.8));
+  border-radius: 50%;
+  font-size: 20px;
+  color: #fff;
+}
+#footer .container .row .list {
+  text-align: center;
+}
+#footer .container .row .list h6 {
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 100%;
+  margin-bottom: 40px;
+}
+#footer .container .row .list .footer__link {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+#footer .container .row .list .footer__link a {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 100%;
+  text-transform: capitalize;
+  display: inline-block;
+}
+
 #color_pick .container .color__main {
   position: fixed;
   right: 50px;
