--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,9 +29,9 @@ h1,h2,h3,h4,h5,h6,p,a{
 //     color: $white;
 // }
 
-.container{
-    width: 1260px;
-}
+// .container{
+//     width: 1260px;
+// }
 
 
 
@@ -394,6 +394,9 @@ p{
                     display: flex;
                     gap: 40px;
                     padding-right: 60px;
+                    img{
+                        width: 100px;
+                    }
                     .content_detail{
                         h3{
                             font-weight: 600;
@@ -426,6 +429,8 @@ p{
             margin-bottom: 64px;
         }
         .row{
+            row-gap: 50px;
+            justify-content: center;
             .blog__main{
                 .blog_item{
                     img{
