--- a/css/style.css
+++ b/css/style.css
@@ -55,11 +55,11 @@ p {
 }
 
 .blue {
-  background: #0084d7 !important;
+  background: linear-gradient(135deg, rgba(0, 94, 199, 0.85), rgba(162, 0, 255, 0.8)) !important;
 }
 
 .blue nav {
-  background: #0084d7 !important;
+  background: #fff !important;
 }
 
 .blue h1 {
@@ -92,6 +92,22 @@ p {
 
 .blue p {
   color: #fff;
+}
+
+.blue #tool .container .row .tool__heading h6 {
+  color: #fff;
+}
+
+.blue #tool .container .row .tool__service .service_content {
+  background-color: rgba(68, 68, 68, 0.67);
+}
+
+.blue #service .container .row .service__main {
+  background-color: rgba(68, 68, 68, 0.67);
+}
+
+.blue #footer {
+  background-color: #444;
 }
 
 .black {
@@ -307,9 +323,11 @@ p {
   display: flex;
   gap: 40px;
   padding-right: 60px;
+  align-items: center;
 }
 #tool .container .row .tool__service .service_content img {
-  width: 100px;
+  width: 120px;
+  height: 120px;
 }
 #tool .container .row .tool__service .service_content .content_detail h3 {
   font-weight: 600;
@@ -393,6 +411,9 @@ p {
   line-height: 150%;
   margin-bottom: 60px;
   color: #fff;
+}
+#team .container .row {
+  row-gap: 40px;
 }
 #team .container .row .team__detail_main .team__detail {
   width: 90%;
@@ -551,7 +572,6 @@ p {
   position: fixed;
   right: 50px;
   top: 200px;
-  background-color: #FCD980;
 }
 #color_pick .container .color__main .setting {
   display: flex;
@@ -560,12 +580,16 @@ p {
   width: 40px;
   height: 40px;
   background-color: aqua;
+  border-radius: 0 0 20px 20px;
 }
 #color_pick .container .color__main .setting:hover .color ul {
   display: flex;
 }
 #color_pick .container .color__main .color {
-  display: block;
+  opacity: 11;
+  padding: 10px 0;
+  background-color: rgba(52, 73, 94, 0.76);
+  border-radius: 20px 20px 0 0;
 }
 #color_pick .container .color__main .color ul {
   padding: 0;
@@ -586,5 +610,5 @@ p {
 }
 
 .activate {
-  display: none !important;
+  opacity: 0 !important;
 }/*# sourceMappingURL=style.css.map */
