--- a/css/style.css
+++ b/css/style.css
@@ -722,7 +722,7 @@ p {
 #color_pick .container .color__main {
   position: fixed;
   right: 50px;
-  bottom: 75px;
+  bottom: 120px;
 }
 #color_pick .container .color__main .setting {
   display: flex;
@@ -762,4 +762,37 @@ p {
 
 .activate {
   opacity: 0 !important;
+}
+
+.activation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background-color: aqua;
+  border-radius: 20px !important;
+}
+
+.bottom_to_top {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #1C1E53;
+  right: 50px;
+  bottom: 60px;
+  position: fixed;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  transition: all linear 0.3s;
+  color: #fff;
+}
+
+.bottom_to_top:hover {
+  color: #fff;
+  background-color: #1b50c1;
+  opacity: 0.8;
 }/*# sourceMappingURL=style.css.map */
